force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/clofor_com_cfs__TruckFleet__c.object-meta.xml
<CustomObject>
    <label>トラック・車両</label>
    <nameField>
        <displayFormat>TF-{000000}</displayFormat>
        <label>TRUCK &amp; FLEET ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>