force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__AdministratorPassword__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AdministratorPassword__c</fullName>
    <label>Administrator Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>