force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__AssetID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AssetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASSET ID</label>
    <referenceTo>clofor_com_cfs__ASSET__c</referenceTo>
    <relationshipLabel>TRUCK &amp; FLEET</relationshipLabel>
    <relationshipName>TruckFleet</relationshipName>
    <type>Lookup</type>
</CustomField>