force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__BaseLocation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BaseLocation__c</fullName>
    <label>LOCATION FOR BASE</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>