force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__ChassisType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChassisType__c</fullName>
    <label>CHASSIS TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20&apos;DC WITH 2 AXIS</fullName>
            </value>
            <value>
                <fullName>20&apos;DC WITH 3 AXIS</fullName>
            </value>
            <value>
                <fullName>20&apos;DC*2 WITH 2 AXIS</fullName>
            </value>
            <value>
                <fullName>20&apos;DC*2 WITH 3 AXIS</fullName>
            </value>
            <value>
                <fullName>40&apos;DC WITH 2 AXIS</fullName>
            </value>
            <value>
                <fullName>40&apos;DC WITH 3 AXIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>