force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__Color__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Color__c</fullName>
    <label>COLOR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Golden or gold</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Pearl white or white</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Golden-brown</fullName>
            </value>
            <value>
                <fullName>Ash black</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Grey</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Maroon</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Beige</fullName>
            </value>
            <value>
                <fullName>Greyish-green</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Blue-green</fullName>
            </value>
            <value>
                <fullName>Deep Violet</fullName>
            </value>
            <value>
                <fullName>Yellow green</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>