force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__ContainerHandlerSubType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerHandlerSubType__c</fullName>
    <label>Container Handler Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ContainerHandlerSubType</valueSetName>
    </valueSet>
</CustomField>