force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__CountryOfManufactured__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CountryOfManufactured__c</fullName>
    <label>Country of Manufactured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CountryList</valueSetName>
    </valueSet>
</CustomField>