force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__EmptyWeight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmptyWeight__c</fullName>
    <description>Weight when empty</description>
    <inlineHelpText>Weight when empty</inlineHelpText>
    <label>EMPTY WEIGHT(TON)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>