force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__EngineChassisNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EngineChassisNumber__c</fullName>
    <description>ENGINE_SHASSI_NUMBER</description>
    <label>ENGINE/SHASSI NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>