force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__FirstRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FirstRegistrationDate__c</fullName>
    <label>DATE OF FIRST REGISTRATION</label>
    <type>Date</type>
</CustomField>