force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__FuelType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FuelType__c</fullName>
    <label>FUEL TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIESEL</fullName>
            </value>
            <value>
                <fullName>GASOLINE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>