force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__GrainCubicCapacity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GrainCubicCapacity__c</fullName>
    <label>Grain cubic capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>