force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__Height__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Height__c</fullName>
    <inlineHelpText>In case of Vessel, input Draught (m) into this field.</inlineHelpText>
    <label>HEIGHT(METER)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>