force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__HomePort__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HomePort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Port</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>TRUCK/FLEET</relationshipLabel>
    <relationshipName>TruckFleet</relationshipName>
    <type>Lookup</type>
</CustomField>