force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__Insurer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INSURER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRUCK &amp; FLEET</relationshipLabel>
    <relationshipName>TRUCK_FLEET</relationshipName>
    <type>Lookup</type>
</CustomField>