force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__MainDriver__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MainDriver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MAIN DRIVER</label>
    <referenceTo>clofor_com_cfs__WORKER__c</referenceTo>
    <relationshipLabel>TRUCK &amp; FLEET</relationshipLabel>
    <relationshipName>TRUCK_FLEET</relationshipName>
    <type>Lookup</type>
</CustomField>