force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__ManagingCompany__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ManagingCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRUCK/FLEET (Managing Company)</relationshipLabel>
    <relationshipName>ManagingCompany</relationshipName>
    <type>Lookup</type>
</CustomField>