force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRUCK/FLEET (Manufacturer)</relationshipLabel>
    <relationshipName>TruckFleet</relationshipName>
    <type>Lookup</type>
</CustomField>