force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__MaximumMeasurement__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaximumMeasurement__c</fullName>
    <label>MAXIMUM MEASURMENT(CBM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>