force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__MaximumWeight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaximumWeight__c</fullName>
    <inlineHelpText>In case of Vessel, input Gross Tonnage into this field.</inlineHelpText>
    <label>MAXIMUM WEIGHT(TON)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>