force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__PICPassword__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICPassword__c</fullName>
    <label>P.I.C Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>