force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__RegisteredOwnerCompany__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RegisteredOwnerCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registered Owner Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRUCK/FLEET (Registered Owner Company)</relationshipLabel>
    <relationshipName>RegisteredOwnerCompany</relationshipName>
    <type>Lookup</type>
</CustomField>