force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RegistrationNumber__c</fullName>
    <label>REGISTRATION CERTIFICATION NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>