force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__TowedWeight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TowedWeight__c</fullName>
    <label>TOWED WEIGHT(TON)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>