force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__TruckFleetQRLabel__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TruckFleetQRLabel__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=100x100&amp;cht=qr&amp;chl=&apos; + Name , &apos;Create Qr Code for this item&apos; )</formula>
    <label>TRUCK &amp; FLEET QR LABEL</label>
    <type>Text</type>
</CustomField>