force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__VesselType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VesselType__c</fullName>
    <label>Vessel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__VesselType</valueSetName>
    </valueSet>
</CustomField>