force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/fields/clofor_com_cfs__YearOfManufacture__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__YearOfManufacture__c</fullName>
    <label>YEAR MANUFACTURED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1980</fullName>
            </value>
            <value>
                <fullName>1981</fullName>
            </value>
            <value>
                <fullName>1982</fullName>
            </value>
            <value>
                <fullName>1983</fullName>
            </value>
            <value>
                <fullName>1984</fullName>
            </value>
            <value>
                <fullName>1985</fullName>
            </value>
            <value>
                <fullName>1986</fullName>
            </value>
            <value>
                <fullName>1987</fullName>
            </value>
            <value>
                <fullName>1988</fullName>
            </value>
            <value>
                <fullName>1989</fullName>
            </value>
            <value>
                <fullName>1990</fullName>
            </value>
            <value>
                <fullName>1991</fullName>
            </value>
            <value>
                <fullName>1992</fullName>
            </value>
            <value>
                <fullName>1993</fullName>
            </value>
            <value>
                <fullName>1994</fullName>
            </value>
            <value>
                <fullName>1995</fullName>
            </value>
            <value>
                <fullName>1996</fullName>
            </value>
            <value>
                <fullName>1997</fullName>
            </value>
            <value>
                <fullName>1998</fullName>
            </value>
            <value>
                <fullName>1999</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2001</fullName>
            </value>
            <value>
                <fullName>2002</fullName>
            </value>
            <value>
                <fullName>2003</fullName>
            </value>
            <value>
                <fullName>2004</fullName>
            </value>
            <value>
                <fullName>2005</fullName>
            </value>
            <value>
                <fullName>2006</fullName>
            </value>
            <value>
                <fullName>2007</fullName>
            </value>
            <value>
                <fullName>2008</fullName>
            </value>
            <value>
                <fullName>2009</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>