force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/recordTypes/clofor_com_cfs__ContainerHandler.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ContainerHandler</fullName>
    <active>true</active>
    <label>Container Handler</label>
</RecordType>