force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/recordTypes/clofor_com_cfs__FULL_CONTAINER_CHASSI.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__FULL_CONTAINER_CHASSI</fullName>
    <active>true</active>
    <label>FULL CONTAINER CHASSI</label>
</RecordType>