force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/recordTypes/clofor_com_cfs__FULL_CONTAINER_TRUCK.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__FULL_CONTAINER_TRUCK</fullName>
    <active>true</active>
    <label>FULL CONTAINER TRUCK</label>
</RecordType>