force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/recordTypes/clofor_com_cfs__TRUCK.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__TRUCK</fullName>
    <active>true</active>
    <label>TRUCK</label>
</RecordType>