force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/recordTypes/clofor_com_cfs__Vessel.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Vessel</fullName>
    <active>true</active>
    <label>Vessel</label>
</RecordType>