force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/recordTypes/clofor_com_cfs__WarehouseMHE.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__WarehouseMHE</fullName>
    <active>true</active>
    <description>Material Handling Equipment</description>
    <label>Warehouse MHE</label>
</RecordType>