force-app/main/default/objects/clofor_com_cfs__TruckFleet__c/listViews/clofor_com_cfs__Barging_Fleet.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Barging_Fleet</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Name__c</columns>
    <columns>clofor_com_cfs__FleetType__c</columns>
    <columns>clofor_com_cfs__TEU__c</columns>
    <columns>clofor_com_cfs__FirstRegistrationDate__c</columns>
    <columns>clofor_com_cfs__RegistrationNumber__c</columns>
    <columns>clofor_com_cfs__NumberPlate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__VesselType__c</field>
        <operation>equals</operation>
        <value>Barging</value>
    </filters>
    <label>Barging Fleet</label>
</ListView>